--- a/lib/widget/widgets/demos/templates/partials/protein-structures-viewer.html
+++ b/lib/widget/widgets/demos/templates/partials/protein-structures-viewer.html
@@ -38,7 +38,7 @@
         </div>
 
         <div id="protein-structures-viewer-py-container" style="resize: vertical; overflow-y: auto;
-border: 1px solid silver; padding: 1rem"></div>
+border: 1px solid silver; padding: 1rem; height; height: 30rem"></div>
 
     </div>
 </div>
