add required parameter error and align param name w/ app

--- a/lib/widget/widgets/demos/templates/partials/demo-genome-viewer.html
+++ b/lib/widget/widgets/demos/templates/partials/demo-genome-viewer.html
@@ -93,7 +93,7 @@ border: 1px solid silver; padding: 1rem; height: 30rem"></div>
         }   
 
         params = {
-            output_object_ref: ref,
+            output_genome_ref: ref,
             change_log
         }
 
