--- a/lib/widget/widgets/protein_structures_viewer/templates/index.html
+++ b/lib/widget/widgets/protein_structures_viewer/templates/index.html
@@ -1,4 +1,5 @@
- <html lang="en-US">
+<!DOCTYPE html >
+<html lang="en-US">
         <head>
             <title>Protein Structures Widget (demo)</title>
 
